--- a/wp-content/themes/samba-child/less/indi.less
+++ b/wp-content/themes/samba-child/less/indi.less
@@ -14,6 +14,9 @@
         background-color: #7c7c7c;
         margin: 15px auto;
         margin-bottom: 25px;
+        @media screen and (max-width: 769px) {
+            display: none;
+        }
     }
     .sf-menu > li.title h4 {
         color: #fff;
